--- a/post/2019-05-14-speedrun.md
+++ b/post/2019-05-14-speedrun.md
@@ -106,6 +106,83 @@ payload += p64(print_got + 7)
 [attack_speedrun005.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun005/attack_speedrun005.py)
 
 
+
+## speedrun-007
+```
+Arch:     amd64-64-little
+RELRO:    Full RELRO
+Stack:    No canary found
+NX:       NX enabled
+PIE:      PIE enabled
+```
+`OOB`라고 해야할까. 암튼 `Relative write`가 가능하다.
+`0x638`을 오프셋으로하면 `main`함수의 ret(`__libc_start_main+231`)를 덮어쓸 수 있는데, 이것을 `onegadget`으로 덮으면 main에서 리턴하면 쉘이 따진다.
+
+물론 확률이 낮다. libc_base + 0x4f322이므로 뒤 6자리만 잘 맞추면 쉘이 따지는데, 여기서 뒤 3자리는 알고 있으니 나머지 16진수 3자리를 맞춰주면 된다. 즉 경우의 수는 0x000~0xFFF로 4096개이다.
+
+그런데, leak도 한번 제대로 못해봣는데... 이렇게 대충 one_gadget으로 맞추는 문제로 괜찮은건가? 게다가 speedrun이라고 문제를 내놓고 확률에 맡기는 문제라니 ... 좋은 문제는 아니지만 이렇게 풀수도있다는 것을 보여주는 문제인 것같다.
+
+[attack_speedrun007.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun005/attack_speedrun007.py)
+
+
+
+## speedrun-008
+```
+Arch:     amd64-64-little
+RELRO:    Partial RELRO
+Stack:    canary found
+NX:       NX enabled
+PIE:      No PIE (0x400000)
+```
+그냥 실행하면 아무것도 안뜬다. 그래서 시작하자마자 엄청 답답한 문제였는데... 사실 무한루프를 도는 것이다;
+
+그리고 문제를 잘 읽었어야했다. speedrun001을 보면 아래와 같이 적혀잇다.
+```
+For all speedrun challenges, flag is in /flag
+```
+그리고 이 문제를 strace로 돌려보면
+```
+myria@ubuntu:~/CTF/DEFCON2019/speedrun008$ strace ./speedrun-008
+read(-1, 0x7ffeac0788f0, 1)             = -1 EBADF (Bad file descriptor)
+read(-1, 0x7ffeac0788f0, 1)             = -1 EBADF (Bad file descriptor)
+read(-1, 0x7ffeac0788f0, 1)             = -1 EBADF (Bad file descriptor)
+read(-1, 0x7ffeac0788f0, 1)             = -1 EBADF (Bad file descriptor)
+read(-1, 0x7ffeac0788f0, 1)             = -1 EBADF (Bad file descriptor)
+...
+...
+```
+망할 뭔가 계속 read 실패로 무한루프를 돈다.
+그리고 서버에 접속해보면 프로그램이 정상적으로 실행되는 것을 알 수 있는데... 이게 로컬에서 안돌아가는 이유가 `/flag`가 없어서이다...
+
+어우야ㅠ..
+
+그리고 IDA에서 발견한 또 한가지...
+
+```
+.init_array:00000000006B6138 ; Segment type: Pure data
+.init_array:00000000006B6138 ; Segment permissions: Read/Write
+.init_array:00000000006B6138 ; Segment alignment 'qword' can not be represented in assembly
+.init_array:00000000006B6138 _init_array     segment para public 'DATA' use64
+.init_array:00000000006B6138                 assume cs:_init_array
+.init_array:00000000006B6138                 ;org 6B6138h
+.init_array:00000000006B6138 off_6B6138      dq offset sub_400B20    ; DATA XREF: .text:0000000000401A22↑o
+.init_array:00000000006B6138                                         ; .text:0000000000401A2B↑o ...
+.init_array:00000000006B6140                 dq offset init_canary
+.init_array:00000000006B6148                 dq offset sub_4005A0
+.init_array:00000000006B6148 _init_array     ends
+```
+.init_array에 `sub_400B4D`가 등록되있는데, 임의로 이름은 `init_canary`로 변경하였다. 이런 문제 예전에도 보았다. canary 우회방법중 하나로 Canary 루틴 노출이 유출되었을때가 있었는데... 멍청하게 또 잊어버림 ㅡㅡ;  
+
+예전에 풀었던 [Canary 루틴 노출문제](https://xerxes-break.tistory.com/370)
+
+어쨋든 다시 여기 문제로 돌아와서, canary를 무엇으로 설정하냐고 하면 `/flag`파일을 읽어서 이를 기반으로 `canary`를 생성한다. 물론 역연산하는것은 어렵다. 하지만 `flag`가 변할 일은 없으니 `canary`값은 항상 같다.
+
+그럼 `bruteforcing`으로 `canary`를 구하고 그 후에는 `rop`를 할 뿐인 문제다.
+
+[attack_speedrun008.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun005/attack_speedrun008.py)
+
+
+
 ## speedrun-009
 ```
 Arch:     amd64-64-little
