defcon27 speedrun post modify

--- a/post/2019-05-14-speedrun.md
+++ b/post/2019-05-14-speedrun.md
@@ -1,14 +1,16 @@
 ---
 layout: post
-title: [DEFCON 2019 Quals] speedrun
+title: [DEFCON 2019 Quals] speedrun (pwn)
 comments: true
 excerpt_separator: <!--more-->
 tags:
   - Write-up
-  - CTF
-  - Pwn
+  - pwnable
+  - defcon27
   - MyriaBreak
 ---
+
+이번 `defcon27`에서 나왔던 `speedrun`에서 `pwn`부분만 골라서 풀어보겠습니다.
 
 [Speedrun Exploit code - github](https://github.com/wotmd/CTF_Exploit/tree/master/DEFCON_CTF_2019)
 
@@ -68,7 +70,7 @@ PIE:      No PIE (0x400000)
 `#포맷스트링버그` `#FSB`
 
 너무 멍청하게 풀어서 대회 당시에 4시간이나 삽질을 한 문제이다. `printf(&buf)`에서 `FSB`가 터지는데, printf로 출력할 때 `\x00`을 만나면 거기까지만 출력해준다. 그런데 여기서 멍청하게 생각을 못한게 어짜피 read로 읽어서 스택에는 데이터가 들어간다는것을 잊고있었다.(아오)
-그래서 그냥 스택에 `got`를 적당한것 puts GOT를 넣고 다시 `FSB`를 읽으켜서 `GOT`를 원샷으로 덮어주면 간단하다. 이걸 못맞추다니;;;
+그래서 그냥 스택에 `got`를 적당한것(puts GOT)를 넣고 다시 `FSB`를 읽으켜서 `GOT`를 원샷가젯으로 덮어주면 간단하다. 이걸 못맞추다니;;;
 근데 끝나고 풀어보려고하니까 데프콘서버쪽에 바이너리가 바뀌어서 익스가 안됨 ㅡㅡ; 서버쪽에는 puts GOT가 0x601020이던데, 뭔일인지...
 
 참고로 `FSB` payload는 pwntool의 fmtstr_payload를 쓰면 빠르게 할 수 있다. 물론 이 함수가 조금 멍청해서 target_address를 payload앞에 집어넣어서 64bit환경일 경우 printf에서 `\x00`으로 진작에 끊겨버리므로 아래와 같은 트릭을 써서 따로 계산해주는게 낫다.
@@ -122,7 +124,7 @@ PIE:      PIE enabled
 
 그런데, leak도 한번 제대로 못해봣는데... 이렇게 대충 one_gadget으로 맞추는 문제로 괜찮은건가? 게다가 speedrun이라고 문제를 내놓고 확률에 맡기는 문제라니 ... 좋은 문제는 아니지만 이렇게 풀수도있다는 것을 보여주는 문제인 것같다.
 
-[attack_speedrun007.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun005/attack_speedrun007.py)
+[attack_speedrun007.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun007/attack_speedrun007.py)
 
 
 
@@ -179,7 +181,7 @@ read(-1, 0x7ffeac0788f0, 1)             = -1 EBADF (Bad file descriptor)
 
 그럼 `bruteforcing`으로 `canary`를 구하고 그 후에는 `rop`를 할 뿐인 문제다.
 
-[attack_speedrun008.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun005/attack_speedrun008.py)
+[attack_speedrun008.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun008/attack_speedrun008.py)
 
 
 
@@ -212,4 +214,4 @@ PIE:      PIE enabled
 ```
 마찬가지로 모든 보호기법이 다 걸려있습니다. 이번 문제의 취약점은 `UAF`입니다. `name`와 `msg`가 모두 `0x30`으로 malloc되고, 값이 리셋되거나 초기화되지않기때문에 `puts`로 `puts`를 `leak`할 수 있고, `puts`자리에 `system`함수를 넣어서 `/bin/sh`를 실행시킬 수도 있다.
 
-[attack_speedrun010.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun009/attack_speedrun010.py)
+[attack_speedrun010.py](https://github.com/wotmd/CTF_Exploit/blob/master/DEFCON_CTF_2019/speedrun010/attack_speedrun010.py)
